# medical-triage

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  db_models.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  shell.nix
.github/: CODEOWNERS
.github/workflows/: ci.yml
db/: init.sql
db/goose/: README.md
docs/: deployment.md
docs/architecture/: implementation-plan.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/lib/: api.ts  patientSession.ts  queueSocket.ts  staffSession.ts  supabase.ts
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_queue_triage_log_id.py  0003_scheduling_appointments.py  0004_local_staff_auth.py
scripts/: migrate.py  seed_demo_staff.py  write_ci_env.sh
services/gateway/: Dockerfile  auth.go  auth_test.go  go.mod  headers_test.go  identity_client.go  jwt.go  jwt_test.go  main.go  staff_login_test.go
services/identity/: Dockerfile  db.go  go.mod  go.sum  main.go  main_test.go  password_test.go
services/queue/: Dockerfile  auth.go  auth_test.go  db.go  go.mod  handlers.go  hub.go  hub_test.go  main.go  triageclient.go  triageclient_test.go  waitstats.go  waitstats_test.go  ws.go
services/scheduling/: Dockerfile  auth.go  auth_test.go  db.go  go.mod  handlers.go  handlers_test.go  main.go
services/triage/: Dockerfile  pyproject.toml
services/triage/tests/: _eval_support.py  conftest.py  test_agent_privacy.py  test_context.py  test_create_queue_item.py  test_injection_regression.py  test_red_flag_eval.py  test_red_flag_failsafe.py  test_scheduling_client.py
services/triage/triage/: __init__.py  agent.py  api.py  config.py  context.py  schema.py
src/: agent.py  api.py  config.py  context.py  db_models.py  schema.py
tests/: _eval_support.py  conftest.py  test_agent_privacy.py  test_context.py  test_create_queue_item.py  test_injection_regression.py  test_red_flag_eval.py  test_red_flag_failsafe.py  test_scheduling_client.py
tools/goose/: Dockerfile
