[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon"
version = "0.1.0"
description = "we can do it in 2 days!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "openai>=1.30.0",
  "langfuse>=2.36.0",
  "psycopg2-binary>=2.9.9",
  "slowapi>=0.1.9",
  "psutil>=5.9.8",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
	"pytest",

	# pip install . install the core application
	# pip install ".[dev]" installs the app PLUS all these testing and linting tools
]


[tool.pytest.ini_options]
# Tell pytest to add the 'src' directory to the PYTHONPATH
pythonpath = [
  "src"
]

[tool.basedpyright]
# Tell basedpyright to add 'src' to its list of
# paths to search for imports. This directly fixes the
# "reportMissingImports" error.
extraPaths = [
  "src"
]
include = ["src"]
exclude = ["__pycache__", ".direnv", ".mypy_cache", ".git", ".venv"]
