[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon"
version = "0.1.0"
description = "we can do it in 2 days!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.18.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "openai>=1.30.0",
  "langfuse>=2.36.0",
  "psycopg2-binary>=2.9.9",
  "slowapi>=0.1.9",
  "psutil>=5.9.8",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"


[tool.pytest.ini_options]
# Tell pytest to add the 'src' directory to the PYTHONPATH
pythonpath = [
  "."
]
