[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "triageos-migrations"
version = "0.1.0"
description = "Shared Alembic migration tooling for TriageOS. Not a running service."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.18.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
